Refine the web interface

--- a/src/main/webapp/assets/views/main.html
+++ b/src/main/webapp/assets/views/main.html
@@ -1,4 +1,4 @@
-<div class="row" ng-controller="UserCtrl">
+<div class="row">
 	<div class="offset1 hero-unit">
 		<h2>Achilles Twitter Demo</h2>
 	    <p>
